kubernetes/core/longhorn/app/base/Deployment--core-longhorn--longhorn-driver-deployer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.13.0
    helm.sh/chart: longhorn-1.13.0
  name: longhorn-driver-deployer
  namespace: core-longhorn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longhorn-driver-deployer
  template:
    metadata:
      labels:
        app: longhorn-driver-deployer
        app.kubernetes.io/instance: longhorn
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: longhorn
        app.kubernetes.io/version: v1.13.0
        helm.sh/chart: longhorn-1.13.0
    spec:
      containers:
        - command:
            - longhorn-manager
            - -d
            - deploy-driver
            - --manager-image
            - docker.io/longhornio/longhorn-manager:v1.13.0
            - --manager-url
            - http://longhorn-backend:9500/v1
          image: docker.io/longhornio/longhorn-manager:v1.13.0
          imagePullPolicy: IfNotPresent
          name: longhorn-driver-deployer
      priorityClassName: longhorn-critical
      securityContext:
        runAsUser: 0
      serviceAccountName: longhorn-service-account
