kubernetes/core/longhorn/app/base/Deployment--core-longhorn--longhorn-global-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: longhorn-global-manager
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.13.0
    helm.sh/chart: longhorn-1.13.0
  name: longhorn-global-manager
  namespace: core-longhorn
spec:
  replicas: 3
  selector:
    matchLabels:
      app: longhorn-global-manager
  template:
    metadata:
      labels:
        app: longhorn-global-manager
        app.kubernetes.io/instance: longhorn
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: longhorn
        app.kubernetes.io/version: v1.13.0
        helm.sh/chart: longhorn-1.13.0
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - longhorn-global-manager
                topologyKey: kubernetes.io/hostname
              weight: 1
      containers:
        - command:
            - longhorn-manager
            - -d
            - global
          image: docker.io/longhornio/longhorn-manager:v1.13.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /v1/healthz
              port: 9505
          name: longhorn-global-manager
          ports:
            - containerPort: 9505
              name: healthz
          readinessProbe:
            httpGet:
              path: /v1/healthz
              port: 9505
      priorityClassName: longhorn-critical
      serviceAccountName: longhorn-service-account
