kubernetes/core/longhorn/app/base/Service--core-longhorn--longhorn-admission-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-admission-webhook
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.13.0
    helm.sh/chart: longhorn-1.13.0
  name: longhorn-admission-webhook
  namespace: core-longhorn
spec:
  ports:
    - name: admission-webhook
      port: 9502
      targetPort: admission-wh
  selector:
    longhorn.io/admission-webhook: longhorn-admission-webhook
  type: ClusterIP
