kubernetes/core/longhorn/app/base/Service--core-longhorn--longhorn-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-manager
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.13.0
    helm.sh/chart: longhorn-1.13.0
  name: longhorn-backend
  namespace: core-longhorn
spec:
  ports:
    - name: manager
      port: 9500
      targetPort: manager
  selector:
    app: longhorn-manager
  type: ClusterIP
