kubernetes/core/longhorn/app/base/Service--core-longhorn--longhorn-recovery-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-recovery-backend
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.13.0
    helm.sh/chart: longhorn-1.13.0
  name: longhorn-recovery-backend
  namespace: core-longhorn
spec:
  ports:
    - name: recovery-backend
      port: 9503
      targetPort: recov-backend
  selector:
    longhorn.io/recovery-backend: longhorn-recovery-backend
  type: ClusterIP
