kubernetes/core/longhorn/app/base/NetworkPolicy--core-longhorn--longhorn-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-webhook
  namespace: core-longhorn
spec:
  ingress:
    - ports:
        - port: 9501
          protocol: TCP
        - port: 9502
          protocol: TCP
  podSelector:
    matchLabels:
      longhorn.io/admission-webhook: longhorn-admission-webhook
  policyTypes:
    - Ingress
